# md5ModelStudio

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  main.hpp  precompiled.hpp
assets/images/: checkboard.xcf
assets/shaders/: draw_gui.fs  draw_meshes.vs
contrib/crglLib/: CMakeLists.txt  crglBuffer.cpp  crglBuffer.hpp  crglContext.cpp  crglContext.hpp  crglCore.cpp  crglCore.hpp  crglFence.cpp  crglFence.hpp  crglFormat.cpp  crglFormat.hpp  crglFrameBuffer.cpp  crglFrameBuffer.hpp  crglImage.cpp  crglImage.hpp  crglPrecompiled.hpp  crglSampler.cpp  crglSampler.hpp  crglShaders.cpp  crglShaders.hpp  crglVertexArray.cpp  crglVertexArray.hpp
contrib/gwen/: CMakeLists.txt
contrib/gwen/Gwen/: BaseRender.h  Controls.h  Exports.h  Font.h  FrameBuffer.h  Macros.h  Precompiled.h  Skin.h  Structures.cpp  Structures.h  Texture.h  Utility.cpp
contrib/gwen/Gwen/Controls/: Base.cpp  Base.h  DrawPanel.cpp  DrawPanel.h  ImagePanel.cpp  ImagePanel.h
contrib/gwen/Gwen/Input/: SDL3.h
contrib/gwen/Gwen/Renderers/: OpenGL.cpp  OpenGL.h  OpenGL_DebugFont.cpp  RenderFont.cpp  RenderFont.hpp
contrib/gwen/Gwen/Skins/: TexturedBase.h
md5Mesh/: md5Anim.cpp  md5Anim.hpp  md5Joint.cpp  md5Joint.hpp  md5Mesh.cpp  md5Mesh.hpp  md5Model.cpp  md5Model.hpp
shaders/: draw_gui.vs
