

set( GWEN_SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Align.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Anim.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Anim.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/BaseRender.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/BaseRender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/ControlList.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/ControlList.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/DragAndDrop.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/DragAndDrop.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/events.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Events.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Exports.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Font.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Gwen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Gwen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Hook.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Hook.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Input
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/inputhandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/InputHandler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Macros.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Platform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Precompiled.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Renderers
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Skin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Skin.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Skins
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Structures.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/TextObject.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Texture.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/ToolTip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/ToolTip.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/UnitTest
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/UserData.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Util
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Utility.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Utility.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/WindowProvider.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Base.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Base.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Button.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Button.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Canvas.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Canvas.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CheckBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CheckBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CollapsibleCategory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CollapsibleCategory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CollapsibleList.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ColorControls.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ColorControls.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ColorPicker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ColorPicker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ComboBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ComboBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CrossSplitter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/CrossSplitter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/DockBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/DockBase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/DockedTabControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/DockedTabControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dragger.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dragger.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/DrawPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/DrawPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/FieldLabel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/FilePicker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/FolderPicker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/GroupBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/GroupBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Highlight.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/HorizontalScrollBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/HorizontalScrollBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/HorizontalSlider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/HorizontalSlider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/HSVColorPicker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/HSVColorPicker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ImagePanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ImagePanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/LabelClickable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/LabelClickable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Label.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Label.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Layout
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Menu.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Menu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/MenuItem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/MenuItem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/MenuStrip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/MenuStrip.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Modal.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/NumericUpDown.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/NumericUpDown.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/PageControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/PageControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ProgressBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ProgressBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Properties.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Properties.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/PropertyTree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/PropertyTree.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/RadioButtonController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/RadioButtonController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/RadioButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/RadioButton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Rectangle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Rectangle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ResizableControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ResizableControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Resizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Resizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/RichLabel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/RichLabel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollBarBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollBarBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollBarButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollBarButton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ScrollControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Slider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Slider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/SplitterBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/SplitterBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Splitters.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/StatusBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabButton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabStrip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabStrip.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TabTitleBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TextBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TextBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TextBoxNumeric.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Text.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Text.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/ToolBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TreeControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TreeControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TreeNode.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/TreeNode.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/VerticalScrollBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/VerticalScrollBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/VerticalSlider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/VerticalSlider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/WindowButtons.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/WindowCanvas.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/WindowCanvas.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/WindowControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/WindowControl.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/FileOpen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/FileOpen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/FileSave.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/FileSave.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/FolderOpen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/FolderOpen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/Query.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Dialogs/Query.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Layout/Position.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Layout/Table.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Layout/Tile.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/BaseProperty.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/Checkbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/ColorSelector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/ComboBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/File.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/Folder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Controls/Property/Text.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Input/SDL3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Platforms/SDL3.cpp
    
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Renderers/FontData.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Renderers/OpenGL.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Renderers/OpenGL.h

    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Skins/Simple.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Skins/TexturedBase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Skins/Texturing.h
    
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Util/ControlFactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Util/ImportExport.h
)

add_library( Gwen STATIC ${GWEN_SOURCE} )
target_compile_definitions( Gwen PRIVATE GWEN_COMPILE_STATIC )
target_precompile_headers( Gwen PUBLIC "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/Gwen/Precompiled.h>" )
